test/langtools/tools/javac/options/release/ReleaseOption.out
ReleaseOption.java:9:49: compiler.err.doesnt.exist: java.util.random
1 error
